# cluon-nmea0183

./: CMakeLists.txt  Dockerfile.amd64  LICENSE.txt  README.md
.github/workflows/: ci-checks.yml  release.yml
src/: NMEA0183_assembler.hpp  assembler.hpp  main.cpp  risemo-message-set.odvd
tests/: fake_nmea_stream_udp.py  test_assembler.cpp  test_nmea_0183_assembler.cpp
